--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -17,7 +17,7 @@
   </head>
   <body>
 
-    <nav>
+  <nav>
     <div class="nav-wrapper white">
       <a href="" class="brand-logo left black-text text-darken-2"><img src="/images/logo.svg" alt="">In Check</a>
       <ul class="right hide-on-med-and-down">
@@ -28,7 +28,7 @@
 
     <main>
       <div class="center-align">
-        <div class="content">
+        <div class="content container">
           <%- body %>
         </div>
       </div>
