--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -4,8 +4,8 @@
     <form class="col s12" action="/register" method="POST">
       <h3>Register</h3>
       <div class="row">
-        <div class="input-field">
-          <input placeholder="Placeholder" id="name" name="name" type="text" class="validate">
+        <div class="input-field col s12">
+          <input id="name" name="name" type="text" class="validate">
           <label for="name">Family Name</label>
         </div>
       </div>
