--- a/views/pages/child.ejs
+++ b/views/pages/child.ejs
@@ -1,5 +1,8 @@
 <%- contentFor('body') %>
 
+<% if (message) { %>
+  <% include ../partials/error.ejs %>
+<% } %>
 
 <div class= "container">
   <h1><%= child.first_name %>: Chores</h1>
