--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -1,4 +1,9 @@
 <%- contentFor('body') %>
+
+<% if (message) { %>
+  <% include ../partials/error.ejs %>
+<% } %>
+
 <div class="container">
   <div class="row">
     <form class="col s12" action="/register" method="POST">
