--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -20,7 +20,7 @@
   <nav>
     <div class="nav-wrapper white">
       <a href="" class="brand-logo left black-text text-darken-2"><img src="/images/logo.svg" alt="">In Check</a>
-      <ul class="right hide-on-med-and-down">
+      <ul class="right">
         <li><a href="/logout" class="waves-effect waves-light btn">Log Out</a></li>
       </ul>
     </div>
