--- a/views/pages/family.ejs
+++ b/views/pages/family.ejs
@@ -3,6 +3,9 @@
 <% if (message) { %>
   <% include ../partials/error.ejs %>
 <% } %>
+<div class="center-align">
+  <h2><%= family.name %> Family Chores List</h2>
+</div>
 
 <script type="text/javascript" src="/js/family.js" defer></script>
 
