hide logout button on index.ejs

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,7 +3,7 @@
 <% if (message) { %>
   <% include ../partials/error.ejs %>
 <% } %>
-
+<script type="text/javascript" src="/js/index.js" defer></script>
 <div class="row">
 
    <form class="col s12 m6 offset-m3" action="/login" method="post">
