adjusted card size in parent view

--- a/views/pages/family.ejs
+++ b/views/pages/family.ejs
@@ -12,7 +12,7 @@
 <div class="row">
 <% for(let child of children){ %>
   <div class="col s6 m4 l3">
-    <div class="card">
+    <div class="card medium">
       <a href="/family/<%= child.id %>">
       <div class="card-image">
         <img src="<%= child.image_url %>">
