Make approve button hidden unless completed

--- a/views/pages/child_parent_view.ejs
+++ b/views/pages/child_parent_view.ejs
@@ -16,7 +16,7 @@
   <table class="bordered">
     <thead>
       <tr>
-        <th>Icon</th>
+        <th style="opacity: 0;">___</th>
         <th>Chore</th>
         <th>Description</th>
         <th>Start</th>
@@ -32,14 +32,18 @@
     <tbody>
       <% for(let chore of child.chores) { %>
         <tr>
-          <td></td>
+          <td class="chore-icon"></td>
           <td class="chore-title"><%= chore.title %></td>
           <td class="chore-description"><%= chore.description %></td>
           <td class="chore-start"><%= chore.start_date.toString().replace(/ \d{2}:.+$/,"") %></td>
           <td class="chore-end"><%= chore.end_date ? chore.end_date.toString().replace(/ \d{2}:.+$/,"") : "" %></td>
           <td class="chore-value"><%= chore.value %></td>
-          <td><a href="<%=chore.completed ? `/family/${child.id}/chore/incomplete/${chore.id}`: `/family/${child.id}/chore/complete/${chore.id}` %>"><input type="checkbox" <%= chore.completed ? checked = "checked": ""%> ><label></label></a></td>
-          <td><a href="<%=chore.approved ? `/family/${child.id}/chore/unapprove/${chore.id}`: `/family/${child.id}/chore/approve/${chore.id}` %>"><input type="checkbox" <%= chore.approved ? checked="checked": ""%> ><label></label></a></td>
+          <td><a href="<%=chore.completed ? `/family/${child.id}/chores/uncomplete/${chore.id}`: `/family/${child.id}/chores/complete/${chore.id}` %>"><input type="checkbox" <%= chore.completed ? checked = "checked": ""%> ><label></label></a></td>
+          <td>
+          <% if (chore.completed) { %>
+          <a href="<%=chore.approved ? `/family/${child.id}/chores/unapprove/${chore.id}`: `/family/${child.id}/chores/approve/${chore.id}` %>"><input type="checkbox" <%= chore.approved ? checked="checked": ""%> ><label></label></a>
+          <% } %>
+          </td>
           <td><a class="waves-effect waves-light btn-floating modal-trigger chore-edit" choreid="<%= chore.id %>" href="#edit-chore-modal"><i class="material-icons">edit</i></a></td>
           <td><a class="waves-effect waves-light btn-floating modal-trigger chore-delete red" choreid="<%= chore.id %>" href="#delete-chore-modal"><i class="material-icons">delete_forever</i></a></td>
         </tr>
