--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -21,7 +21,7 @@
     <div class="nav-wrapper white">
       <a href="" class="brand-logo left black-text text-darken-2"><img src="/images/logo.svg" alt="">In Check</a>
       <ul class="right">
-        <li><a href="/logout" class="waves-effect waves-light btn">Log Out</a></li>
+        <li><a href="/logout" class="black-text">LOG OUT</a></li>
       </ul>
     </div>
   </nav>
