--- a/views/pages/family.ejs
+++ b/views/pages/family.ejs
@@ -14,7 +14,7 @@
   <div class="col s6 m4 l3">
     <div class="card medium">
       <a href="/family/<%= child.id %>">
-      <div class="card-image">
+      <div class="card-image" style="min-height: 240px">
         <img src="<%= child.image_url %>">
       </div>
       <div class="card-content left-align">
