--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 
     <title>In Check</title>
-
+    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="/css/materialize.min.css"  media="screen,projection"/>
     <link rel='stylesheet' href='/css/master.css' />
@@ -19,7 +19,7 @@
 
   <nav>
     <div class="nav-wrapper white">
-      <a href="" class="brand-logo left black-text text-darken-2"><img src="/images/logo.svg" alt="">In Check</a>
+      <a href="" class="brand-logo left black-text text-darken-2 chorelist"><img src="/images/logo.svg" alt="">In Check</a>
       <ul class="right">
         <li><a href="/logout" class="black-text">LOG OUT</a></li>
       </ul>
