--- a/views/pages/child_parent_view.ejs
+++ b/views/pages/child_parent_view.ejs
@@ -11,7 +11,7 @@
 </script>
 
 <div class="center-align">
-  <h3><%= child.first_name %></h3>
+  <h1 class="chorelist"><%= child.first_name %></h1>
 
   <table class="bordered">
     <thead>
