--- a/views/pages/family.ejs
+++ b/views/pages/family.ejs
@@ -4,7 +4,7 @@
   <% include ../partials/error.ejs %>
 <% } %>
 <div class="center-align">
-  <h2><%= family.name %> Family Chores List</h2>
+  <h1 class="chorelist"><%= family.name %> Family Chores List</h1>
 </div>
 
 <script type="text/javascript" src="/js/family.js" defer></script>
