Update headers makes headers for login and registration page match the other pages.

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,10 +4,14 @@
   <% include ../partials/error.ejs %>
 <% } %>
 <script type="text/javascript" src="/js/index.js" defer></script>
+
+<div class="center-align">
+  <h1 class="chorelist">Log In</h1>
+</div>
+
 <div class="row">
 
    <form class="col s12 m6 offset-m3" action="/login" method="post">
-     <h3>Login</h3>
      <div class="row">
        <div class="input-field col s12">
          <input autofocus id="username" name="username" type="text" class="validate">
