--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -9,7 +9,9 @@
 <div class="container">
   <div class="row">
     <form class="col s12" action="/register" method="POST">
-      <h3>Register</h3>
+      <div class="center-align">
+        <h1 class="chorelist">Register</h1>
+      </div>
       <div class="row">
         <div class="input-field col s12">
           <input id="name" name="name" type="text" class="validate" required>
