--- a/views/pages/child.ejs
+++ b/views/pages/child.ejs
@@ -6,8 +6,8 @@
 
 <script type="text/javascript" src="/js/child.js" defer></script>
 
-<div class= "container">
-  <h1><%= child.first_name %>'s Chores</h1>
+<div class= "container" style="border: solid 3px; border-radius: 4%; background-color: ghostwhite; margin-top: 2%; border-color: ghostwhite;">
+  <h1 style="margin-top: 1%;"><%= child.first_name %>'s Chores </h1>
 
   <table class="bordered">
         <thead>
@@ -35,8 +35,8 @@
       </table>
 </div>
 
-<div class="container">
-  <h2>Completed Chores</h2>
+<div class="container" style="border: solid 3px; border-radius: 4%; background-color: ghostwhite; margin-top: 2%; margin-bottom:2%; border-color: ghostwhite;">
+  <h2 style="margin-top: 1%;">Completed Chores</h2>
   <table class="bordered">
     <thead>
       <tr>
