--- a/views/pages/child_parent_view.ejs
+++ b/views/pages/child_parent_view.ejs
@@ -10,8 +10,8 @@
   let childId = <%- child.id %>;
 </script>
 
-<div class="center-align">
-  <h1 class="chorelist"><%= child.first_name %></h1>
+<div class="center-align" style="border: solid 3px; border-radius: 4%; background-color: ghostwhite; margin-top: 8%; border-color: ghostwhite; opacity: 0.8;">
+  <h1 style="margin-top: 1%;" class="chorelist"><%= child.first_name %></h1>
 
   <table class="bordered">
     <thead>
@@ -52,20 +52,22 @@
 
 
 
-  <a class="waves-effect waves-light btn modal-trigger" href="#add-chore-modal">Add Chore<i class="material-icons right">add</i></a>
-  <a class="waves-effect waves-light btn modal-trigger" href="#edit-child-modal">Edit child<i class="material-icons right">edit</i></a>
-  <a class="btn waves-effect waves-light modal-trigger red" href="#delete-child-modal">Delete Child<i class="material-icons right">delete</i></a>
+  <a style="margin: 1%;" class="waves-effect waves-light btn modal-trigger" href="#add-chore-modal">Add Chore<i class="material-icons right">add</i></a>
+  <a style="margin: 1%;" class="waves-effect waves-light btn modal-trigger" href="#edit-child-modal">Edit child<i class="material-icons right">edit</i></a>
+  <a style="margin: 1%;" class="btn waves-effect waves-light modal-trigger red" href="#delete-child-modal">Delete Child<i class="material-icons right">delete</i></a>
 
-  <div id="edit-chore-modal" class="modal">
-    <div class="modal-content">
-      <div class="center-align">
-        <div class="row">
-          <form class="col s12 m6 offset-m3" id="form-edit" action="" method="post">
-            <div class="row black-text">
-              <div class="input-field col s12 black-text">
-                <select autofocus class="black-text">
-                  <% for (let c of children) { %>
-                    <option class="black-text" value="<%= c.id %>" <% c.id === child.id ? "selected" : "" %><%= c.first_name %></option>
+</div>
+
+<div id="edit-chore-modal" class="modal">
+  <div class="modal-content">
+    <div class="center-align">
+      <div class="row">
+        <form class="col s12 m6 offset-m3" id="form-edit" action="" method="post">
+          <div class="row black-text">
+            <div class="input-field col s12 black-text">
+              <select autofocus class="black-text">
+                <% for (let c of children) { %>
+                  <option class="black-text" value="<%= c.id %>" <% c.id === child.id ? "selected" : "" %><%= c.first_name %></option>
                   <% } %>
                 </select>
                 <label>Change Assigned Child</label>
@@ -211,5 +213,3 @@
       </div>
     </div>
   </div>
-
-</div>
