--- a/views/pages/family.ejs
+++ b/views/pages/family.ejs
@@ -1,65 +1,67 @@
 <%- contentFor('body') %>
 
-<% if (message) { %>
-  <% include ../partials/error.ejs %>
-<% } %>
-<div class="center-align">
-  <h1 class="chorelist"><%= family.name %> Family Chores List</h1>
-</div>
+  <% if (message) { %>
+    <% include ../partials/error.ejs %>
+      <% } %>
+        <div class="center-align">
+          <h1 class="chorelist"><%= family.name %> Family Chores List</h1>
+        </div>
 
-<script type="text/javascript" src="/js/family.js" defer></script>
+        <script type="text/javascript" src="/js/family.js" defer></script>
 
-<div class="row">
-<% for(let child of children){ %>
-  <div class="col s6 m4 l3">
-    <div class="card medium">
-      <a href="/family/<%= child.id %>">
-      <div class="card-image" style="min-height: 240px">
-        <img src="<%= child.image_url %>">
-      </div>
-      <div class="card-content left-align">
-        <span class="card-title"><%= child.first_name %></span>
-        <p><%= child.chores.filter(chore=>!chore.completed).length %> Incomplete Chores</p>
-        <p><%= child.chores.filter(chore=>chore.completed).length %> Completed Chores</p>
-      </div>
-      <div class="card-action"><a href="/family/<%= child.id %>">View Child</a></div>
-      </a>
-    </div>
-  </div>
-<% } %>
-</div>
-
-
-<div class="center-align">
-  <button id="toggle-add-child-form" class="btn-large waves-effect waves-light" type="submit" name="action">Add Children<i class="material-icons right">person_add</i></button>
-</div>
+        <div class="row">
+          <% for(let child of children){ %>
+            <div class="col s6 m4 l3">
+              <div class="card medium">
+                <a href="/family/<%= child.id %>">
+                  <div class="card-image" style="min-height: 240px">
+                    <img src="<%= child.image_url %>">
+                  </div>
+                  <div class="card-content left-align">
+                    <span class="card-title"><%= child.first_name %></span>
+                    <p>
+                      <%= child.chores.filter(chore=>!chore.completed).length %> Incomplete Chores</p>
+                    <p>
+                      <%= child.chores.filter(chore=>chore.completed).length %> Completed Chores</p>
+                  </div>
+                  <div class="card-action"><a href="/family/<%= child.id %>">View Child</a></div>
+                </a>
+              </div>
+            </div>
+            <% } %>
+        </div>
 
 
-<div class="row">
-  <form class="col s12 m6 offset-m3" action="/family" method="post">
-    <div class="row">
-      <div class="input-field col s12">
-        <input id="first_name" type="text" name="first_name" class="validate" required>
-        <label for="first_name">First Name</label>
-      </div>
-    </div>
-    <div class="row">
-      <div class="input-field col s12">
-        <input id="username" name="username" type="text" class="validate" required>
-        <label for="username">Username</label>
-      </div>
-    </div>
-    <div class="row">
-      <div class="input-field col s12">
-        <input id="password" type="password" name="password" class="validate" required>
-        <label for="password">Password</label>
-      </div>
-    </div>
-    <div class="row">
-      <button type="submit" class="waves-effect waves-light btn-large" type="submit">Let's Make a Child<i class="material-icons right">add_circle</i></button>
-    </div>
-  </form>
+        <div class="center-align">
+          <button class="btn-large waves-effect waves-light btn modal-trigger" href="#add-child-modal" type="submit" name="action">Add Children<i class="material-icons right">person_add</i></button>
+        </div>
 
-
-
-</div>
+        <div id="add-child-modal" class="modal">
+          <div class="modal-content">
+            <div class="row">
+              <form class="col s12 m6 offset-m3" action="/family" method="post">
+                <div class="row">
+                  <div class="input-field col s12">
+                    <input id="first_name" type="text" name="first_name" class="validate" required>
+                    <label for="first_name">First Name</label>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="input-field col s12">
+                    <input id="username" name="username" type="text" class="validate" required>
+                    <label for="username">Username</label>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="input-field col s12">
+                    <input id="password" type="password" name="password" class="validate" required>
+                    <label for="password">Password</label>
+                  </div>
+                </div>
+                <div class="row">
+                  <button type="submit" class="waves-effect waves-light btn-large" type="submit">Let's Make a Child<i class="material-icons right">add_circle</i></button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
