--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,7 +5,8 @@
 <% } %>
 <script type="text/javascript" src="/js/index.js" defer></script>
 
-<div class="center-align">
+
+<div class="center-align log">
   <h1 class="chorelist">Log In</h1>
 </div>
 
@@ -29,6 +30,7 @@
      </div>
    </form>
  </div>
+<hr>
  <div class="center-align">
-   <a href="/register" class="waves-effect waves-light btn-large"><i class="material-icons left">group</i>Register</a>
+   <a href="/register" class="waves-effect waves-light btn"><i class="material-icons left">group</i>Register</a>
  </div>
